; ModuleID = '/home/carl/AnghaBench/linux/drivers/devfreq/extr_devfreq-event.c_devfreq_event_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/devfreq/extr_devfreq-event.c_devfreq_event_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devfreq_event_dev = type { i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @devfreq_event_is_enabled(%struct.devfreq_event_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.devfreq_event_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.devfreq_event_dev* %0, %struct.devfreq_event_dev** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %3, align 8
  %6 = icmp ne %struct.devfreq_event_dev* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %3, align 8
  %9 = getelementptr inbounds %struct.devfreq_event_dev, %struct.devfreq_event_dev* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* %2, align 4
  br label %28

14:                                               ; preds = %7
  %15 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %3, align 8
  %16 = getelementptr inbounds %struct.devfreq_event_dev, %struct.devfreq_event_dev* %15, i32 0, i32 1
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %3, align 8
  %19 = getelementptr inbounds %struct.devfreq_event_dev, %struct.devfreq_event_dev* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp sgt i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 1, i32* %4, align 4
  br label %23

23:                                               ; preds = %22, %14
  %24 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %3, align 8
  %25 = getelementptr inbounds %struct.devfreq_event_dev, %struct.devfreq_event_dev* %24, i32 0, i32 1
  %26 = call i32 @mutex_unlock(i32* %25)
  %27 = load i32, i32* %4, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %23, %12
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
